--- a/mise_en_page/tp3/index.html
+++ b/mise_en_page/tp3/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +8,142 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body>
-    <img src="Goutte_eau.png" class="leaf-shaped-element">
-    <p class="leaf-shaped-element">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius enim sit pariatur doloremque alias neque veritatis debitis? Voluptatibus quis doloremque inventore facere, quibusdam officiis possimus nisi reiciendis sunt voluptatum eos.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto veniam vero distinctio non, laudantium, ullam earum culpa doloribus est modi possimus! Dolorum quas, unde eius neque officiis odio harum modi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab laborum odit quasi. Voluptates sit dolorem quas id perferendis at nam quo expedita, distinctio officiis, optio et fugiat, officia nihil cumque.</p>
-    <br>
-    <p class="triangle-topleft"></p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto veniam vero distinctio non, laudantium, ullam earum culpa doloribus est modi possimus! Dolorum quas, unde eius neque officiis odio harum modi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab laborum odit quasi. Voluptates sit dolorem quas id perferendis at nam quo expedita, distinctio officiis, optio et fugiat, officia nihil cumque.</p>
 
+<body>
+    <img src="Goutte_eau.png" class="coucou">
+    <p class="leaf-shaped-element">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius enim sit pariatur
+        doloremque alias neque veritatis debitis? Voluptatibus quis doloremque inventore facere, quibusdam officiis
+        possimus nisi reiciendis sunt voluptatum eos.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto veniam vero distinctio non, laudantium,
+        ullam earum culpa doloribus est modi possimus! Dolorum quas, unde eius neque officiis odio harum modi. Lorem
+        ipsum dolor sit, amet consectetur adipisicing elit. Ab laborum odit quasi. Voluptates sit dolorem quas id
+        perferendis at nam quo expedita, distinctio officiis, optio et fugiat, officia nihil cumque.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto veniam vero distinctio non, laudantium,
+        ullam earum culpa doloribus est modi possimus! Dolorum quas, unde eius neque officiis odio harum modi. Lorem
+        ipsum dolor sit, amet consectetur adipisicing elit. Ab laborum odit quasi. Voluptates sit dolorem quas id
+        perferendis at nam quo expedita, distinctio officiis, optio et fugiat, officia nihil cumque.Lorem ipsum dolor
+        sit amet consectetur adipisicing elit. Laborum doloribus maxime facere dolore sit architecto suscipit?
+        Recusandae, dicta voluptatibus! Corrupti cupiditate dolores tempora et nulla! A eum sit beatae cumque? Lorem
+        ipsum dolor sit amet consectetur adipisicing elit. Distinctio molestiae quos alias. Nam fugiat at delectus
+        inventore odio voluptatem, voluptates hic voluptatibus dolores cupiditate eum consequuntur, eaque debitis,
+        perferendis enim? Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio soluta assumenda, unde nam in
+        molestiae repudiandae ad qui veniam, dolore voluptatem tempora incidunt distinctio, reprehenderit iste
+        perspiciatis ipsam eaque nobis. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim ipsum, dolorem
+        labore ex modi ea sunt voluptatum. Repellat incidunt illo architecto aut velit, eveniet cumque delectus,
+        repellendus nisi, quidem consequatur. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam aliquam
+        natus provident iure molestias illum officia, fuga consectetur accusamus animi vel</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti reprehenderit assumenda distinctio nisi et
+        minima illo aut iusto expedita vitae temporibus laudantium nesciunt quia, quod, quis incidunt sit nobis
+        consectetur? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio sit magnam optio nisi animi?
+        Aspernatur dolore quam delectus dolor magni totam, rem consequuntur repellendus dignissimos molestiae et
+        officiis enim dolorem.</p>
+
+    <div class="triangle-code"></div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores rerum sit amet aperiam culpa eum, ipsa enim
+        iure animi, dolores eaque, quae temporibus quasi dolorum praesentium inventore eveniet esse sunt! Lorem ipsum
+        dolor sit amet consectetur adipisicing elit. Corrupti cum sed illo, harum laudantium consequuntur minus nulla
+        iure temporibus praesentium, doloribus minima? Quisquam quos ipsa adipisci debitis nulla ipsam nostrum? Lorem
+        ipsum dolor sit amet consectetur adipisicing elit. Voluptate aspernatur sed, rem qui tempora alias deleniti
+        doloremque fugiat odio laborum optio necessitatibus quisquam autem et. Eveniet maxime aliquam enim harum? Lorem,
+        ipsum dolor sit amet consectetur adipisicing elit. Rem veritatis minus omnis voluptate, voluptatibus modi odit
+        dolores iusto fugit labore quod dicta deserunt veniam impedit, ea sint ex totam eius. Lorem ipsum dolor sit amet
+        consectetur adipisicing elit. Ipsam expedita, voluptatibus, aut laborum quam officia officiis earum nobis autem
+        consectetur inventore saepe sit architecto. Inventore iusto neque ratione totam quam. Lorem ipsum dolor sit amet
+        consectetur adipisicing elit. Libero inventore nesciunt rerum ad animi itaque, sequi sit natus aspernatur
+        dolores numquam minima veritatis corrupti qui asperiores nihil, ab ut eveniet. Lorem ipsum dolor sit amet
+        consectetur, adipisicing elit. Excepturi, harum similique? Soluta alias veritatis totam, corporis harum vel
+        deserunt magnam quia id saepe ad porro possimus aspernatur accusantium deleniti optio. Lorem ipsum dolor sit
+        amet consectetur, adipisicing elit. Earum ducimus repellendus nam tempore illo quos! Accusantium omnis, iste
+        unde nisi possimus deserunt fugit obcaecati voluptatibus earum quos consequuntur atque corporis. Lorem ipsum
+        dolor sit amet consectetur adipisicing elit. Doloremque, vero vitae ducimus cupiditate consectetur reiciendis
+        alias ut minima aliquid. Blanditiis doloremque veritatis iusto. Cum nam, nemo nihil impedit odit perferendis.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsum, in laboriosam, temporibus harum saepe
+        dolorem officiis soluta itaque beatae amet aperiam quasi, est rem? Distinctio quam nostrum cum beatae?
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione esse commodi nam laudantium totam sunt
+        suscipit fugit aspernatur. Dolor repudiandae, tempora quaerat cupiditate beatae doloremque deserunt fugiat sequi
+        quod odio! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum eum voluptatem quibusdam iusto
+        tempora natus unde vel porro repellendus dolore. Fugit ipsa ipsum numquam. Soluta animi maiores consequuntur
+        odit dignissimos! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti doloribus asperiores cumque
+        omnis. Veritatis, a placeat distinctio ipsam aliquid cumque doloremque voluptas fuga, illo est, natus voluptatem
+        deleniti magni dolorum. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium libero, nulla
+        nostrum, voluptas dolorem possimus sapiente culpa architecto quibusdam voluptatem reprehenderit repudiandae
+        eveniet consequuntur itaque suscipit error tenetur necessitatibus officiis!
+    </p>
+    <div class="rectangle"></div>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae dolorum magni fuga, atque, qui illo impedit,
+        distinctio tempore magnam deleniti voluptate. Expedita modi nihil qui voluptate laboriosam adipisci corrupti
+        officiis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde quod omnis veniam ex accusantium dolorem
+        blanditiis harum? Perspiciatis impedit libero quidem velit recusandae neque repellat veniam quaerat nisi
+        doloribus! Iusto! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic debitis tenetur saepe sint
+        doloremque consequatur velit corrupti quam accusantium rerum dolore nemo ipsa, mollitia dicta laudantium dolorum
+        in animi maxime? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique, magnam omnis. Natus, iste
+        assumenda. Est beatae quisquam nam velit sit accusamus illo quos? Quas quia ipsam itaque necessitatibus corrupti
+        eligendi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis sequi nulla excepturi laborum corrupti
+        quibusdam, maiores et magnam natus soluta illum ducimus temporibus debitis aperiam, fugit sed blanditiis ratione
+        commodi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet facere numquam cupiditate fuga,
+        dolores delectus hic aperiam voluptatem a quis eum. Adipisci eos tempore necessitatibus consequuntur veritatis
+        delectus nobis inventore! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus iure nam corporis
+        temporibus? Distinctio temporibus harum perspiciatis nisi enim possimus adipisci molestias placeat cupiditate
+        ratione esse, illum beatae repellendus eligendi? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet
+        eveniet libero, repellat distinctio optio labore suscipit earum harum repellendus voluptatem modi dolorem
+        tempora vel officiis! Minus nobis officiis eligendi asperiores? Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Qui repudiandae sunt illo, similique porro neque doloribus aperiam repellat eum nostrum.
+        Veniam at quo error sapiente rem animi ullam culpa iste? Lorem ipsum dolor sit amet consectetur adipisicing
+        elit. Quis reiciendis autem odio esse assumenda rerum dolores quam quaerat nihil dignissimos corrupti quae at
+        expedita, beatae dolorem corporis, aliquid, saepe aut. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+        Corrupti quo qui repellat blanditiis ad sequi accusamus provident! Reprehenderit in, provident veritatis, rerum
+        sequi amet tempore consequuntur optio molestiae maiores qui! Lorem ipsum dolor sit amet consectetur adipisicing
+        elit. Dolorum tempore aliquam, nisi minima ab, quod voluptates excepturi officiis est inventore quasi sunt
+        officia magnam earum nemo quibusdam necessitatibus reiciendis et! Lorem ipsum dolor sit, amet consectetur
+        adipisicing elit. Ut accusantium sint architecto saepe vitae, hic minima asperiores quaerat iure autem
+        distinctio adipisci aliquam consequatur voluptatibus. Voluptatem laudantium soluta natus accusamus. Lorem ipsum
+        dolor sit amet consectetur adipisicing elit. Omnis reiciendis veniam esse corrupti pariatur perferendis
+        doloribus itaque dicta, temporibus laborum neque iure, totam dignissimos amet maxime necessitatibus sunt fuga
+        qui. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem doloribus repellat neque, cupiditate
+        odio, eum corrupti quam cumque, atque dolor similique qui id sapiente eligendi sed aperiam fuga ullam porro.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta ad distinctio illum modi corrupti commodi autem
+        aperiam. Beatae nihil corporis voluptates, eaque at nobis voluptate, reprehenderit minima ipsum asperiores
+        molestias! Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo tempora iste reiciendis nesciunt
+        odio impedit excepturi aperiam velit id. Nisi dolore id veniam quisquam voluptates, et cumque assumenda nostrum
+        eius. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat sequi repellendus sunt minima rerum
+        autem eligendi? Voluptate distinctio qui mollitia, aut rerum ea ullam repudiandae esse magni nesciunt quibusdam
+        unde? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime suscipit officia sit cumque doloribus
+        illum debitis ea ullam, magni at aliquid, voluptates animi tenetur ab iure explicabo perferendis maiores
+        commodi.</p>
+    
+        <img src="eiffel.jpg" class="eiffel">
+
+        <div class="triangle-codes"></div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores rerum sit amet aperiam culpa eum, ipsa enim
+        iure animi, dolores eaque, quae temporibus quasi dolorum praesentium inventore eveniet esse sunt! Lorem ipsum
+        dolor sit amet consectetur adipisicing elit. Corrupti cum sed illo, harum laudantium consequuntur minus nulla
+        iure temporibus praesentium, doloribus minima? Quisquam quos ipsa adipisci debitis nulla ipsam nostrum? Lorem
+        ipsum dolor sit amet consectetur adipisicing elit. Voluptate aspernatur sed, rem qui tempora alias deleniti
+        doloremque fugiat odio laborum optio necessitatibus quisquam autem et. Eveniet maxime aliquam enim harum? Lorem,
+        ipsum dolor sit amet consectetur adipisicing elit. Rem veritatis minus omnis voluptate, voluptatibus modi odit
+        dolores iusto fugit labore quod dicta deserunt veniam impedit, ea sint ex totam eius. Lorem ipsum dolor sit amet
+        consectetur adipisicing elit. Ipsam expedita, voluptatibus, aut laborum quam officia officiis earum nobis autem
+        consectetur inventore saepe sit architecto. Inventore iusto neque ratione totam quam. Lorem ipsum dolor sit amet
+        consectetur adipisicing elit. Libero inventore nesciunt rerum ad animi itaque, sequi sit natus aspernatur
+        dolores numquam minima veritatis corrupti qui asperiores nihil, ab ut eveniet. Lorem ipsum dolor sit amet
+        consectetur, adipisicing elit. Excepturi, harum similique? Soluta alias veritatis totam, corporis harum vel
+        deserunt magnam quia id saepe ad porro possimus aspernatur accusantium deleniti optio. Lorem ipsum dolor sit
+        amet consectetur, adipisicing elit. Earum ducimus repellendus nam tempore illo quos! Accusantium omnis, iste
+        unde nisi possimus deserunt fugit obcaecati voluptatibus earum quos consequuntur atque corporis. Lorem ipsum
+        dolor sit amet consectetur adipisicing elit. Doloremque, vero vitae ducimus cupiditate consectetur reiciendis
+        alias ut minima aliquid. Blanditiis doloremque veritatis iusto. Cum nam, nemo nihil impedit odit perferendis.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsum, in laboriosam, temporibus harum saepe
+        dolorem officiis soluta itaque beatae amet aperiam quasi, est rem? Distinctio quam nostrum cum beatae?
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione esse commodi nam laudantium totam sunt
+        suscipit fugit aspernatur. Dolor repudiandae, tempora quaerat cupiditate beatae doloremque deserunt fugiat sequi
+        quod odio! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum eum voluptatem quibusdam iusto
+        tempora natus unde vel porro repellendus dolore. Fugit ipsa ipsum numquam. Soluta animi maiores consequuntur
+        odit dignissimos! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti doloribus asperiores cumque
+        omnis. Veritatis, a placeat distinctio ipsam aliquid cumque doloremque voluptas fuga, illo est, natus voluptatem
+        deleniti magni dolorum. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium libero, nulla
+        nostrum, voluptas dolorem possimus sapiente culpa architecto quibusdam voluptatem reprehenderit repudiandae
+        eveniet consequuntur itaque suscipit error tenetur necessitatibus officiis!
+    </p>
 </body>
+
 </html>
