--- a/tp9/TP9.html
+++ b/tp9/TP9.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset=UTF-8>
 	<title>Blog fictif</title>
+	<meta name="viewport" content="width=device-width, user-scalable=no">
 	<link href=style.css rel=stylesheet />
 </head>
 
